--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
   --red-color: #B22222;
   --light-color: #fff;
   --additional-color: #617D98;
-
 }
 
 html {
@@ -21,6 +20,10 @@ html {
   font-family: 'Formula1-Regular';
   src: url("./FONTS/Formula1-Regular.ttf") format("truetype");
 }
+@font-face{
+  font-family: "Mars";
+  src: url("./FONTS/Mars.ttf") format("truetype");
+}
 
 *,
 ::before,
@@ -34,20 +37,117 @@ body {
   font-family: sans-serif;
 }
 
+.navbar{
+  position: sticky;
+  top: 0;
+  left: 0;
+}
 .content {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
+.video-container{
+  position:fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3b3131;
+  min-width: 100vw;
+  min-height: 100vh;
+  overflow: hidden;
+}
+.video{
+  width: 100%;
+  opacity: 0.8;
+}
+.logo-container{
+    height: 100%;
+    justify-self: flex-end;
+    padding-top: 2rem;
+}
+#logo {
+  width: 60px;
+  transform: scaleX(1.4);
+}
+.textContent{
+  position: fixed;
+  left: 7rem;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-end; */
+  gap: 5rem;
+  padding: 0 0 4rem 0;
+  /* margin-right: 12rem; */
+  color: #fff;
+  width: 70%;
+  height: 100%;
+}
+.textContent h1{
+  font-family: "Mars";
+  margin: 0 !important;
+  font-size: 2.6rem;
+  width: 40%;
+}
 
+.navigation{
+  justify-self: flex-end;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 1.3rem;
+  height: 2rem;
+}
+.watch-video{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.3rem;
+  cursor: pointer;
+}
+.watch-video:hover{
+  text-decoration: none;
+  color: var(--primary-color);
+}
+.navigation h6{
+  font-family: "Formula1-Regular";
+  margin: 0 !important;
+  text-transform: uppercase;
+  font-size: .6rem !important;
+  letter-spacing: 2px;
+}
+
+.navigate-home{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.3rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: #fff;
+}
+
+.navigate-home:hover{
+  text-decoration: none;
+  color: var(--primary-color);
+}
 #landing-page {
   background-color: rgb(0, 0, 0);
   height: 100vh;
   color: #fff;
   z-index: 1;
+
   position: relative;
 }
 
+#line{
+  background-color: #fff;
+  height: 3.5px;
+  width: 6rem;
+  align-self: flex-end;
+  margin-bottom: 6.5px;
+  border-radius: 20px;
+}
 #landing-page::before {
   content: '';
   background-image: url("./pictures/backGroundLandingPage_FIN.jpg");
@@ -61,11 +161,6 @@ body {
   height: 100%;
   z-index: -1;
   opacity: 0.9;
-}
-
-#logo {
-  width: 50px;
-  opacity: 0.6;
 }
 
 #nav-bar {
@@ -129,8 +224,8 @@ aside #lineTwo {
 }
 
 #section-page #text-content h1 {
-  font-family: "Formula1-Black";
-  font-size: 3.2rem;
+  font-family: "Mars";
+  font-size: 2.49rem;
 }
 
 #section-page #text-content p {
@@ -145,7 +240,8 @@ aside #lineTwo {
 }
 
 .icons > *:hover {
-  color: var(--primary-color);
+  filter: drop-shadow(1px 1px 3px #53c6b5);
+  /* box-shadow:0px 1px 10px 2px var(--primary-color);   */
   transform: scale(1.2);
 }
 
@@ -158,19 +254,19 @@ aside #lineTwo {
   font-size: 1.2rem;
   width: max-content;
   transition: .25s linear;
-  /* border-radius: 10px; */
 }
 .auto{
   background-color: var(--red-color);
   color: #fff;
 }
 .man:hover {
-  background-color: var(--red-color);
-  color: #fff;
+  box-shadow: 0px 1px 10px 2px #fff;
+  color: #333;
 }
 .auto:hover{
-  background-color: #fff;
-  color: #333;
+  background-color: #ce2525;
+  box-shadow: 0px 1px 10px 2px #ff4b4b;
+  color: #fff;
 }
 .buttons{
   display: flex;
